# Adaptive-RL-Agent-for-Dynamic-Resource-Allocation

./: .gitignore  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  demo_meta_learning.py  main_evaluate.py  main_train.py  pyproject.toml  requirements.txt  setup.py  test_notebook_functionality.py  test_system.py
configs/: default_config.yaml
data/: README.md
docs/: README.md
models/: double_dqn_checkpoint_100.pth  double_dqn_checkpoint_200.pth  double_dqn_checkpoint_300.pth  double_dqn_checkpoint_400.pth  double_dqn_checkpoint_500.pth  double_dqn_final.pth  double_dqn_training_data.csv  dqn_checkpoint_100.pth  dqn_checkpoint_200.pth  dqn_checkpoint_25.pth  dqn_checkpoint_300.pth  dqn_checkpoint_400.pth  dqn_checkpoint_50.pth  dqn_checkpoint_500.pth  dqn_final.pth  dqn_training_data.csv
notebooks/: README.md  complete_system_demo.ipynb  experiment_analysis.ipynb  quick_test.py
research/: research_main.ipynb
results/: comparison_results.csv  dqn_evaluation.csv
scripts/: run_experiments.py
src/agents/: double_dqn_agent.py  dqn_agent.py  meta_dqn_agent.py
src/environments/: meta_task_generator.py  network_traffic_env.py
src/models/: dqn_model.py
src/utils/: meta_trainer.py  plotters.py  replay_buffer.py
tests/: __init__.py  conftest.py  test_components.py  test_placeholder.py
